# mpr

./: .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
examples/: CMakeLists.txt  example1.cpp
include/: Attribute.h  Context.h  ContextRenderer.hpp  Input.h  Material.h  Texture.h  shader_utils.h  uniform_installers.hpp
include/common/: utils.hpp
include/gl/: Input.h  OpenGL.hpp  glUniforms.h
include/interfaces/: RenderSystem.hpp  RenderUnit.h  Uniform.h  attribute_provider.h  material_provider.h  uniform_provider.h
include/renderables/: mesh.hpp
src/: CMakeLists.txt  context_functions.cpp  shader_utils.cpp  uniform_functions.cpp
src/include/: Attribute.h  Buffer.h  Context.h  Material.h  Pass.h  RenderablePass.h
src/include/common/: Attribute.h  utils.hpp
src/include/gl/: GLRenderer.hpp
src/include/interfaces/: RenderSystem.hpp  RenderUnit.h  Renderable.h  RendererInitializer.hpp  Uniform.h  attribute_provider.h  material_provider.h  uniform_provider.h
src/include/renderables/: mesh.hpp
tests/: CMakeLists.txt  material.cpp  test.cpp
